tests/compile_fail/duplicated_def_type.stderr
error: def_type is duplicated in #[def(...)].
 --> $DIR/duplicated_def_type.rs:5:46
  |
5 |     #[def(field_num = 1, def_type = "int32", def_type = "int32")]
  |                                              ^^^^^^^^^^^^^^^^^^
